update error related to react vite/import .env elements

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_YOUTUBE_API_KEY='AIzaSyCQ-9YxQGqkLYKeExbYi0-9seW5jcErObI'
-REACT_APP_YOUTUBE_CHANNEL_ID='UCsgESzD2-QRq56WIdPYXV3A'
+VITE_REACT_APP_YOUTUBE_API_KEY=AIzaSyCQ-9YxQGqkLYKeExbYi0-9seW5jcErObI
+VITE_REACT_APP_YOUTUBE_CHANNEL_ID=UCsgESzD2-QRq56WIdPYXV3A
